--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 asgiref==3.8.1
+build==1.2.2.post1
 Django==5.1.6
+django-debug-toolbar==5.0.1
+django-polls @ file:///home/abdulrahman/repos/pollsapp/django-polls/dist/django_polls-0.1.tar.gz#sha256=9ef7b0f701287bfb846a52b86b6e425a2b8d2d900dcd57027a1ff4b0f5d2051a
 packaging==24.2
 pipdeptree==2.25.0
+pyproject_hooks==1.2.0
+setuptools==75.8.2
 sqlparse==0.5.3
